fix: auto overflow on scroll containers

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -279,12 +279,12 @@
 }
 
 .scroll {
-  overflow: scroll;
+  overflow-x: auto;
 }
 
 .full-width {
   margin: 20px 0 20px -50%;
-  overflow: scroll;
+  overflow-x: auto;
 
   @include media-query($on-tablet) {
     margin-left: 0;
